<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/businessRegistrationPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glidalee6a"
    tools:context=".BusinessRegistrationPageActivity">


    <TextView
        android:id="@+id/appNameTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/allura"
        android:text="@string/app_name"
        android:textColor="@color/btn_txt_color"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTxtView"
        app:layout_constraintVertical_bias="0.90999997" />

    <TextView
        android:id="@+id/textViewBusinessRegPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/b_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@+id/editTextBusinessNameReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn_box_background"
        android:ems="10"
        android:hint="@string/b_user_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#AE978B8B"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBusinessRegPage"
        app:layout_constraintVertical_bias="0.04000002"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextBusinessOwnerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn_box_background"
        android:ems="10"
        android:hint="@string/b_owner_name"
        android:inputType="textPersonName"
        android:textColorHint="#AE978B8B"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusinessNameReg"
        app:layout_constraintVertical_bias="0.043"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextBusinessEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn_box_background"
        android:ems="10"
        android:hint="@string/b_user_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#AE978B8B"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusinessOwnerName"
        app:layout_constraintVertical_bias="0.055"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextBusinessPasswordReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn_box_background"
        android:ems="10"
        android:hint="@string/b_user_password"
        android:inputType="textPassword"
        android:textColorHint="#AE978B8B"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusinessEmailAddress"
        app:layout_constraintVertical_bias="0.056"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextBusinessPasswordRegRetype"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn_box_background"
        android:ems="10"
        android:hint="@string/b_user_retype_password"
        android:inputType="textPassword"
        android:textColorHint="#AE978B8B"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusinessPasswordReg"
        app:layout_constraintVertical_bias="0.085"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextBusinessPhoneReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn_box_background"
        android:ems="10"
        android:hint="@string/b_user_phone_number"
        android:inputType="phone"
        android:textColorHint="#AE978B8B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusinessPasswordRegRetype"
        app:layout_constraintVertical_bias="0.118"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/registerBusinessHereBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/arima_madurai_extrabold"
        android:text="@string/registration_txt"
        android:textColor="@color/btn_txt_color"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/btn_box_background"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusinessPhoneReg" />


</androidx.constraintlayout.widget.ConstraintLayout>